# Sol-Dev

./: .gitignore
Anchor-/: new_keypair.json
Anchor-/test-project/: Anchor.toml
Anchor-/test-project/programs/test-project/: Cargo.toml
Anchor-/test-project2/: Anchor.toml  package.json
Anchor-/test-project2/programs/test-project2/: Cargo.toml
Anchor-/vot-for-car/: Anchor.toml
Anchor-/vot-for-car/programs/vot-for-car/: Cargo.toml
Anchor-/voting/: Anchor.toml
Anchor-/voting2/: Anchor.toml
Anchor-/voting2/programs/voting2/: Cargo.toml
Native-Rust/CPI/cpi_with_signer/: Cargo.toml
Native-Rust/CPI/cpi_with_signer/src/: main.rs
Native-Rust/CPI/cpi_without_signer/: Cargo.toml
Native-Rust/Counter/: Cargo.toml
Native-Rust/Counter/src/: createNew.rs  lib.rs  main.rs  restoreWallet.rs
Native-Rust/PDA-Derivation/: Cargo.toml
Native-Rust/PDA-Derivation/src/: main.rs
Native-Rust/Programs/Hello-World/: Cargo.toml
Native-Rust/Solana-Core/Acounts/Account Types/programStateAccount/: Cargo.toml
Native-Rust/Solana-Core/Acounts/Account Types/programStateAccount/src/: main.rs
Native-Rust/instructions/: Cargo.toml
Native-Rust/instructions/src/: main.rs
Native-Rust/iteratingBumps/: Cargo.toml
Native-Rust/iteratingBumps/src/: main.rs
Native-Rust/solanaAriDrop/: Cargo.toml
Native-Rust/solanaAriDrop/src/: main.rs
Native-Rust/transaction/: Cargo.toml
Native-Rust/transaction/src/: main.rs
TypeScript/Accounts/AccountStructure/: PDA.ts  package-lock.json  package.json  pub-key.ts
wallet/: Cargo.toml  wallet_key.json
wallet/src/: main.rs
(+20 files in other folders)
