[package]
name = "instructions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
solana-client = "3.1.12"
solana-commitment-config = "3.1.1"
solana-sdk = "4.0.1"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
tokio = { version = "1.51.1", features = ["full"] }
